# address_book_api

./: .env.example  .gitignore  README.md  alembic.ini  app.db  pyproject.toml
alembic/: env.py
alembic/versions/: d68ec6d60d0d_init.py  f213dea27381_seed_entity_types.py
app/: main.py
app/api/: deps.py
app/api/v1/routes/: addresses.py  entity_types.py
app/core/: config.py  database.py
app/models/: address.py
app/repositories/: address_repo.py
app/schemas/: address.py
app/services/: address_service.py
tests/: test_addresses.py
